# cnc-designer

./: cnc-designer.desktop  meson.build
snap/: snapcraft.yaml
src/: cnc-application-window.c  cnc-application-window.h  cnc-application-window.ui  cnc-application.c  cnc-application.h  cnc-designer.gresource.xml  cnc-etcher.c  cnc-etcher.h  cnc-gcode-generator.c  cnc-gcode-generator.h  cnc-grbl-client.c  cnc-grbl-client.h  cnc-layer.c  cnc-layer.h  cnc-plan-view.c  cnc-plan-view.h  cnc-plan.c  cnc-plan.h  cnc-shape.c  cnc-shape.h  meson.build
